--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
+    <script language="javascript" type="text/javascript" src="E:\Idea\LoveFen\src\main\resources\static\js\\jquery-1.8.0.min.js"></script>
+    <script language="javascript" type="text/javascript" src="E:\Idea\LoveFen\src\main\resources\static\js\\login.js"></script>
     <title>Love Fen</title>
 </head>
 <body>
 <h1>Spring Boot 成功</h1>
+<!--<a href="html/login.html">登录</a>-->
+<button id="login">OK</button>
 </body>
 </html>
